# pkg_tar_runfiles

./: WORKSPACE
path/to/some/app/: BUILD.bazel
shared/libraries/some_lib/: BUILD.bazel  some_lib.go
